--- a/db.yaml
+++ b/db.yaml
@@ -24,7 +24,21 @@
        name : 
         - PyMySql
         - cryptography
-        
+
        executable: pip3.9
+   - name: check mysql server root password
+     community.mysql.mysql_info:
+       login_user: root
+       login_password: {{database_password}}
+       login_host: {{login_host}}
+       filter: version
+      ignore_errors: yes
+      register: output
+      
+    - name: print output
+      ansible.builtin.debug:
+       msg: "{{output}}"
+
+
     
    
