--- a/db.yaml
+++ b/db.yaml
@@ -29,8 +29,8 @@
    - name: check mysql server root password
      community.mysql.mysql_info:
       login_user: root
-      login_password: {{ database_password }}
-      login_host: {{ login_host }}
+      login_password: "{{ database_password }}"
+      login_host: "{{ login_host }}"
       filter: version
      ignore_errors: yes
      register: output
