latest ansibleconf changes

--- a/db.yaml
+++ b/db.yaml
@@ -39,9 +39,9 @@
      ansible.builtin.debug:
       msg: "{{output}}"
    - name: setup password
-     ansible.builtin.command: "mysql_secure_installation --set-root-pass {{database_password}}}"
+     ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ database_password }}"
      when: output.failed is true
-     
+
     
 
 
