--- a/backend.yaml
+++ b/backend.yaml
@@ -36,7 +36,8 @@
     ansible.builtin.command: npm install
     args:
       chdir: /app
-  - name: Another symbolic mode example, adding some permissions and removing others
+  - name: Copy backend service
     ansible.builtin.copy:
      src: backend.service
      dest: /etc/systemd/system/backend.service
+  
